# protviz

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Gemfile  LICENSE  README.md  _config.yml  index.md  pyproject.toml
.github/workflows/: doc.yml  jekyll.yml  python-tests.yml
_includes/: favicon.html
_includes/components/: children_nav.html
_includes/components/nav/: links.html  sorted.html
_includes/css/: activation.scss.liquid
_site/: 404.html  README.md  feed.xml  index.html
_site/CHANGELOG/: index.html
_site/MIGRATION/: index.html
_site/assets/css/: just-the-docs-dark.css  just-the-docs-dark.css.map  just-the-docs-default.css  just-the-docs-default.css.map  just-the-docs-light.css  just-the-docs-light.css.map
_site/assets/js/: just-the-docs.js  search-data.json
_site/docs/: features.html  getting-started.html  minimal-test.html  running-examples.html  search.html
_site/docs/configuration/: index.html
_site/docs/core-components/: index.html
_site/docs/customization/: index.html
_site/docs/examples/: index.html
_site/docs/index-test/: index.html
_site/docs/layout/: layout.html
_site/docs/minimal-test/: index.html
_site/docs/navigation/: index.html
_site/docs/search/: index.html
_site/docs/ui-components/: index.html
_site/docs/utilities/: index.html
assets/css/: just-the-docs-head-nav.css
docs/: conf.py  features.md  getting-started.md  running-examples.md  search.md
docs/_build/doctrees/: environment.pickle  features.doctree  index.doctree  usage.doctree
docs/_build/html/: .buildinfo  (+6 more)
docs/core-components/: index.md
docs/examples/: index.md
docs/layout/: layout.md
examples/: custom.py  example.py  example_afdb.py  example_interpro.py  example_pdbe.py  example_pdbe_zoom.py  example_ted.py
source/: conf.py  features.rst  index.rst
src/protviz/: __init__.py  core_plotting.py
tests/: test_afdb_client.py  test_interpro_client.py  test_pdbe_client.py  test_ted_client.py  test_uniprot_client.py
(+69 files in other folders)
